# validated.github.io

./: .ghcid  .gitignore  LICENSE  Main.hs  README.md  app.cabal  cabal.project  default.nix  shell.nix
docs/: index.html
docs/0.1.0.0/: lib.js  out.frefs.js  out.frefs.json  out.stats
docs/0.1.0.0/static/: app.css  patch.js
docs/0.2.0.0/: out.frefs.js  out.stats
docs/0.2.0.0/static/: app.css  readme.html
docs/0.2.0.1/: out.frefs.json  out.stats
src/: QR.hs
static/: app.js
