cabal-version: 2.2
name:          app
version:       0.1.0.0
category:      Web
build-type:    Simple
synopsis:
  Online digital certificate of tequila consumption QR code generator

common shared
  default-language:   Haskell2010
  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  default-extensions:
    NoImplicitPrelude
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedLists
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    StandaloneDeriving
    TypeApplications

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules: QR
  build-depends:
    , base
    , base-prelude
    , base64-bytestring
    , bmp
    , bytestring
    , qrcode-core
    , text
    , vector

executable app
  import:        shared
  main-is:       Main.hs
  ghcjs-options: -dedupe
  build-depends:
    , aeson
    , app
    , async
    , base
    , base-prelude
    , base64-bytestring
    , bytestring
    , extra
    , jsaddle
    , microlens
    , microlens-th
    , miso
    , modern-uri
    , network-uri
    , qrcode-core
    , text
    , transformers

  if !impl(ghcjs)
    build-depends:
      , jsaddle-warp
      , wai
      , wai-app-static
      , warp
      , websockets
